<?xml version="1.0" encoding="utf-8"?>

<layout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="195dp">

                <ImageView
                        android:id="@+id/imageView"
                        android:background="@drawable/blank"
                        android:layout_width="match_parent"
                        android:scaleType="matrix"
                        android:layout_height="195dp"
                        android:contentDescription="@string/dc_name"/>

                <TextView
                        android:id="@+id/textViewIsNew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:width="38dp"
                        android:background="#008000"
                        android:padding="2dp"
                        android:text="@string/new_name"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />

                <TextView
                        android:id="@+id/textViewRating"
                        android:text="@string/rating_name"
                        android:layout_marginStart="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginBottom="15dp"
                        android:padding="4dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:background="@drawable/textview_round_border_background"
                        android:textSize="12sp"
                        android:textColor="@android:color/white"
                        android:layout_width="25dp"
                        android:layout_height="25dp" />

                <RelativeLayout
                        android:paddingTop="3dp"
                        android:paddingBottom="3dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:layout_margin="15dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/relativelayout_background"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:layout_marginRight="6dp"
                            android:layout_marginEnd="6dp"
                            android:layout_marginTop="3dp"
                            android:id="@+id/imageViewLike"
                            android:background="@drawable/ic_like"
                            android:layout_width="15dp"
                            android:layout_height="14dp"
                            android:contentDescription="@string/dc_name"/>

                    <TextView
                            android:layout_toRightOf="@id/imageViewLike"
                            android:layout_toEndOf="@+id/imageViewLike"
                            android:textSize="17sp"
                            android:textStyle="bold"
                            android:textColor="#ffffff"
                            android:id="@+id/textViewLikePercent"
                            android:text="@string/percent_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    <TextView
                            android:text="@string/votes_name"
                            android:textSize="12sp"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/textViewLikePercent"
                            android:textColor="@android:color/white"
                            android:id="@+id/textViewVotesCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                </RelativeLayout>

            </RelativeLayout>


            <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/textViewTitle"
                        android:textSize="18sp"
                        android:textColor="#1A1A1A"
                        android:text="@string/title_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                <TextView
                        android:text="@string/language_name"
                        android:id="@+id/textViewLanguage"
                        android:layout_below="@id/textViewTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                <Button
                        android:id="@+id/bookButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/book_name"
                        app:backgroundTint="@color/colorBlue" />

            </RelativeLayout>

            <TextView
                    android:background="#414141"
                    android:layout_marginBottom="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

            <TextView
                    android:id="@+id/textViewType"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/textview_border_background"
                    android:padding="2dp"
                    android:text="@string/d_name"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>
